la till salnummer på varje person

--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -119,7 +119,10 @@
                         Telefon: 018-18 22 79<br />
 
                         <!-- Working days and hours -->
-                        Arbetar: Förmiddagar
+                        Arbetar: Förmiddagar<br />
+
+                        <!-- room number/location -->
+                        Sal: 10
                     </p>
                 </div>
 
@@ -154,7 +157,10 @@
                         Telefon: 018-18 22 93, 076-830 32 48<br />
 
                         <!-- Working days and hours -->
-                        Arbetar: Ojämna måndagar, tisdagar, onsdagar, fredagar
+                        Arbetar: Ojämna måndagar, tisdagar, onsdagar, fredagar<br />
+
+                        <!-- room number/location -->
+                        Sal: Höger om sal 46
                     </p>
                 </div>
 
@@ -191,7 +197,10 @@
                         Telefon: 018-18 22 73, 076-820 11 72<br />
 
                         <!-- Working days and hours -->
-                        Arbetar: Måndagar, onsdagar, jämna fredagar
+                        Arbetar: Måndagar, onsdagar, jämna fredagar<br />
+
+                        <!-- room number/location -->
+                        Sal: Höger om sal 46
                     </p>
                 </div>
 
@@ -226,7 +235,10 @@
                         Telefon: 018-18 22 71<br />
 
                         <!-- Working days and hours -->
-                        Arbetar: Alla dagar
+                        Arbetar: Alla dagar<br />
+
+                        <!-- room number/location -->
+                        Sal: 2
                     </p>
                 </div>
 
@@ -261,7 +273,10 @@
                         Telefon: 018-18 22 77<br />
 
                         <!-- Working days and hours -->
-                        Arbetar: Alla dagar
+                        Arbetar: Alla dagar<br />
+
+                        <!-- room number/location -->
+                        Sal: 3
                     </p>
                 </div>
             </div>
