ändrade kalender- och kartikonerna till tydligare versioner

--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -127,10 +127,10 @@
                         <i class="fa fa-phone"></i> Telefon: 018-18 22 79<br />
 
                         <!-- Working days and hours -->
-                        <i class="fa fa-calendar"></i> Arbetar: Förmiddagar<br />
+                        <i class="fa fa-calendar-alt"></i> Arbetar: Förmiddagar<br />
 
                         <!-- room number/location -->
-                        <i class="fa fa-map"></i> Sal: 10
+                        <i class="fa fa-map-marker-alt"></i> Sal: 10
                     </p>
                 </div>
 
@@ -165,10 +165,10 @@
                         <i class="fa fa-phone"></i> Telefon: 018-18 22 93, 076-830 32 48<br />
 
                         <!-- Working days and hours -->
-                        <i class="fa fa-calendar"></i> Arbetar: Ojämna måndagar, tisdagar, onsdagar, fredagar<br />
+                        <i class="fa fa-calendar-alt"></i> Arbetar: Ojämna måndagar, tisdagar, onsdagar, fredagar<br />
 
                         <!-- room number/location -->
-                        <i class="fa fa-map"></i> Sal: Höger om sal 46
+                        <i class="fa fa-map-marker-alt"></i> Sal: Höger om sal 46
                     </p>
                 </div>
 
@@ -205,10 +205,10 @@
                         <i class="fa fa-phone"></i> Telefon: 018-18 22 73, 076-820 11 72<br />
 
                         <!-- Working days and hours -->
-                        <i class="fa fa-calendar"></i> Arbetar: Måndagar, onsdagar, jämna fredagar<br />
+                        <i class="fa fa-calendar-alt"></i> Arbetar: Måndagar, onsdagar, jämna fredagar<br />
 
                         <!-- room number/location -->
-                        <i class="fa fa-map"></i> Sal: Höger om sal 46
+                        <i class="fa fa-map-marker-alt"></i> Sal: Höger om sal 46
                     </p>
                 </div>
 
@@ -243,10 +243,10 @@
                         <i class="fa fa-phone"></i> Telefon: 018-18 22 71<br />
 
                         <!-- Working days and hours -->
-                        <i class="fa fa-calendar"></i> Arbetar: Alla dagar<br />
+                        <i class="fa fa-calendar-alt"></i> Arbetar: Alla dagar<br />
 
                         <!-- room number/location -->
-                        <i class="fa fa-map"></i> Sal: 2
+                        <i class="fa fa-map-marker-alt"></i> Sal: 2
                     </p>
                 </div>
 
@@ -281,10 +281,10 @@
                         <i class="fa fa-phone"></i> Telefon: 018-18 22 77<br />
 
                         <!-- Working days and hours -->
-                        <i class="fa fa-calendar"></i> Arbetar: Alla dagar<br />
+                        <i class="fa fa-calendar-alt"></i> Arbetar: Alla dagar<br />
 
                         <!-- room number/location -->
-                        <i class="fa fa-map"></i> Sal: 3
+                        <i class="fa fa-map-marker-alt"></i> Sal: 3
                     </p>
                 </div>
             </div>
