Tog bort felaktig information om SYV

--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -110,7 +110,7 @@
                         <div class="col-7">
                             <p>
                                 <!-- Info -->
-                                Susanne arbetar som studie- och yrkesvägledare. SYV vägleder dig inom de utbildningar som finns att välja mellan. Susanne hjälper dig med dina nuvarande studier. Hon kan också hjälpa dig med att få aktuell information kring vidare studier, yrken och arbetsmarknad.
+                                Susanne arbetar som studie- och yrkesvägledare. SYV vägleder dig inom de utbildningar som finns att välja mellan. Hon kan också hjälpa dig med att få aktuell information kring vidare studier, yrken och arbetsmarknad.
 
                             </p>
                         </div>
