ändrade vägbeskrivning för kuratorn och skolsköterskans sal

--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -168,7 +168,7 @@
                         <i class="fa fa-calendar-alt"></i> Arbetar: Ojämna måndagar, tisdagar, onsdagar, fredagar<br />
 
                         <!-- room number/location -->
-                        <i class="fa fa-map-marker-alt"></i> Sal: Höger om sal 46
+                        <i class="fa fa-map-marker-alt"></i> Sal: Höger om Teknik/Naturs lärarrum, nära sal 45
                     </p>
                 </div>
 
@@ -208,7 +208,7 @@
                         <i class="fa fa-calendar-alt"></i> Arbetar: Måndagar, onsdagar, jämna fredagar<br />
 
                         <!-- room number/location -->
-                        <i class="fa fa-map-marker-alt"></i> Sal: Höger om sal 46
+                        <i class="fa fa-map-marker-alt"></i> Sal: Höger om Teknik/Naturs lärarrum, nära sal 45
                     </p>
                 </div>
 
