lade till te4 logga

--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -290,5 +290,8 @@
             </div>
         </div>
     </div>
+    <div style="position:absolute; right:15px; bottom:15px; ">
+        <img src="img\TE4-logo-transparent.png" alt="TE4" height="120px;">
+    </div>
 </body>
 </html>
