--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -46,7 +46,10 @@
         }
 
         .profile-image {
-            height: 300px;
+            position:absolute;
+            left: 109px;
+            height: 375px;
+            width: 285;
             max-width: 100%;
         }
 
@@ -108,7 +111,7 @@
                     </div>
                     <div class="row">
                         <div class="col-7">
-                            <p>
+                            <p style="padding-left: 10px;">
                                 <!-- Info -->
                                 Susanne arbetar som studie- och yrkesvägledare. SYV vägleder dig inom de utbildningar som finns att välja mellan. Hon kan också hjälpa dig med att få aktuell information kring vidare studier, yrken och arbetsmarknad.
 
@@ -147,7 +150,7 @@
                     </div>
                     <div class="row">
                         <div class="col-7">
-                            <p>
+                            <p style="padding-left: 10px;">
                                 <!-- Info -->
                                 Megan arbetar som skolkurator. En skolkurator arbetar med elevernas psykosociala hälsa i frågor som rör trygghet, trivsel, arbetsmiljö, relationer och den sociala situationen både i och utanför skolan. Megan arbetar bland annat med samtalsstöd till elever och ger handledning och konsultation till övrig skolpersonal och vårdnadshavare. Kuratorer har tystnadsplikt.
                             </p>
@@ -173,7 +176,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <div class="name row align-items-end justify-content-between">
+                    <div class="name row justify-content-between">
                         <div class="col-7">
                             <!-- Name -->
                             <h2 style="padding-left: 10px;">Maud Enbom</h2>
@@ -184,8 +187,8 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col">
-                            <p>
+                        <div class="col-7">
+                            <p style="padding-left: 10px;">
                                 <!-- Info -->
                                 Maud arbetar som skolsköterska. En skolsköterska erbjuder alla elever hälsobesök med hälsosamtal i åk1.
                                 Som gymnasieelev förväntas man, med stöd av vårdnadshavare, att ta eget ansvar för mediciner som man eventuellt behöver ta under skoldagen. Skolsköterskor har tystnadsplikt.
@@ -224,8 +227,8 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col">
-                            <p>
+                        <div class="col-7">
+                            <p style="padding-left: 10px;">
                                 <!-- Info -->
                                 Henrik arbetar som rektor och specialpedagog. En specialpedagog samarbetar med övrig personal för att göra skolan tillgänglig för alla elever. Om du behöver hjälp i dina studier och har svårt att nå målen kan specialpedagogen se över din studiesituation för att hitta vägar och den hjälp du behöver.
                             </p>
@@ -262,8 +265,8 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col">
-                            <p>
+                        <div class="col-7">
+                            <p style="padding-left: 10px;">
                                 <!-- Info -->
                                 Sarah arbetar som biträdande rektor och specialpedagog. En specialpedagog samarbetar med övrig personal för att göra skolan tillgänglig för alla elever. Om du behöver hjälp i dina studier kan specialpedagogen se över din studiesituation för att hitta vägar och den hjälp du behöver.
                             </p>
