uppdaterade bild med TE4 logga

--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -82,7 +82,7 @@
 </head>
 
 
-<body>
+<body style="overflow: hidden;">
     <div class="container-fluid">
         <header class="text-center">
             <object data="Img/ElevHalsaLogo.svg" type="image/svg+xml" width="350">
@@ -294,7 +294,7 @@
         </div>
     </div>
     <div style="position:absolute; right:15px; bottom:15px; ">
-        <img src="img\TE4-logo-transparent.png" alt="TE4" height="120px;">
+        <img src="Img\TE4-logo-transparent.png" alt="TE4" height="120px;">
     </div>
 </body>
 </html>
