Uppdaterad info Co-authored-by: Pontus <Pontus.granath@elev.ga.ntig.se>

--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -95,10 +95,49 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
             </ol>
-
             <div class="carousel-inner">
                 <div class="carousel-item active">
+                    <div class="name row justify-content-between">
+                        <div class="col-7">
+                            <!-- Name -->
+                            <h2 style="padding-left: 10px;">Mathias Laveno</h2>
+                        </div>
+                        <div class="col-4 pl-0">
+                            <!-- Role -->
+                                <h2>Rektor</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-7">
+                            <p style="padding-left: 10px;">
+                                <!-- Info -->
+                                info
+
+                            </p>
+                        </div>
+                        <div class="col-4 text-center">
+                            <!-- Image -->
+                            <img class="profile-image" src="Img/Profile/mathias300.jpg" />
+                        </div>
+                    </div>
+                    <p class="contact">
+                        <!-- Email -->
+                        <i class="fa fa-envelope"></i> E-post: mathias.laveno@ntig.se<br />
+
+                        <!-- Phone -->
+                        <i class="fa fa-phone"></i> Telefon: 018-18 22 72<br />
+
+                        <!-- Working days and hours -->
+                        <i class="fa fa-calendar-alt"></i> Arbetar: Alla dagar 08-17<br />
+
+                        <!-- room number/location -->
+                        <i class="fa fa-map-marker-alt"></i> Sal: 126 Våning: 1 <br><br><br><br><br><br />
+                    </p>
+                </div>
+
+                <div class="carousel-item">
                     <div class="name row justify-content-between">
                         <div class="col-7">
                             <!-- Name -->
@@ -130,10 +169,10 @@
                         <i class="fa fa-phone"></i> Telefon: 018-18 22 79<br />
 
                         <!-- Working days and hours -->
-                        <i class="fa fa-calendar-alt"></i> Arbetar: Förmiddagar<br />
+                        <i class="fa fa-calendar-alt"></i> Arbetar: Alla dagar 08-12<br />
 
                         <!-- room number/location -->
-                        <i class="fa fa-map-marker-alt"></i> Sal: 30
+                        <i class="fa fa-map-marker-alt"></i> Sal: 326 Våning: 3 <br><br><br><br><br><br />
                     </p>
                 </div>
 
@@ -168,10 +207,10 @@
                         <i class="fa fa-phone"></i> Telefon: 018-18 22 93, 076-830 32 48<br />
 
                         <!-- Working days and hours -->
-                        <i class="fa fa-calendar-alt"></i> Arbetar: Ojämna måndagar, tisdagar, onsdagar, fredagar<br />
+                        <i class="fa fa-calendar-alt"></i> Arbetar: Alla dagar Utom tisdagar<br />
 
                         <!-- room number/location -->
-                        <i class="fa fa-map-marker-alt"></i> Sal: Höger om Teknik/Naturs lärarrum, nära sal 45
+                        <i class="fa fa-map-marker-alt"></i> Sal: 327, Våning: 3 <br><br><br><br><br><br />
                     </p>
                 </div>
 
@@ -211,7 +250,7 @@
                         <i class="fa fa-calendar-alt"></i> Arbetar: Måndagar, onsdagar, jämna fredagar<br />
 
                         <!-- room number/location -->
-                        <i class="fa fa-map-marker-alt"></i> Sal: Höger om Teknik/Naturs lärarrum, nära sal 45
+                        <i class="fa fa-map-marker-alt"></i> Sal: 329, Våning: 3 <br><br><br><br><br><br />
                     </p>
                 </div>
 
@@ -230,7 +269,7 @@
                         <div class="col-7">
                             <p style="padding-left: 10px;">
                                 <!-- Info -->
-                                Henrik arbetar som rektor och specialpedagog. En specialpedagog samarbetar med övrig personal för att göra skolan tillgänglig för alla elever. Om du behöver hjälp i dina studier och har svårt att nå målen kan specialpedagogen se över din studiesituation för att hitta vägar och den hjälp du behöver.
+                                Henrik arbetar som biträdande rektor och specialpedagog. En specialpedagog samarbetar med övrig personal för att göra skolan tillgänglig för alla elever. Om du behöver hjälp i dina studier och har svårt att nå målen kan specialpedagogen se över din studiesituation för att hitta vägar och den hjälp du behöver.
                             </p>
                         </div>
                         <div class="col text-center">
@@ -246,10 +285,10 @@
                         <i class="fa fa-phone"></i> Telefon: 018-18 22 71<br />
 
                         <!-- Working days and hours -->
-                        <i class="fa fa-calendar-alt"></i> Arbetar: Alla dagar<br />
+                        <i class="fa fa-calendar-alt"></i> Arbetar: Alla dagar 08-17<br />
 
                         <!-- room number/location -->
-                        <i class="fa fa-map-marker-alt"></i> Sal: 2
+                        <i class="fa fa-map-marker-alt"></i> Sal: 126, Våning: 1 <br><br><br><br><br><br />
                     </p>
                 </div>
 
@@ -284,10 +323,10 @@
                         <i class="fa fa-phone"></i> Telefon: 018-18 22 77<br />
 
                         <!-- Working days and hours -->
-                        <i class="fa fa-calendar-alt"></i> Arbetar: Alla dagar<br />
+                        <i class="fa fa-calendar-alt"></i> Arbetar: Alla dagar 08-17<br />
 
                         <!-- room number/location -->
-                        <i class="fa fa-map-marker-alt"></i> Sal: 3
+                        <i class="fa fa-map-marker-alt"></i> Sal: 127 , Våning: 1 <br><br><br><br><br><br /> 
                     </p>
                 </div>
             </div>
