Added school counselor and school nurse

--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -38,7 +38,7 @@
         }
 
         body {
-            background-color: #1a0f27;
+            background-color:black;
             margin: 25px;
             margin-top: 0px;
             font-size: 30px;
@@ -77,6 +77,10 @@
         {
             font-weight: 100;
         }
+        .procivitas{
+            font-size: 40px;
+            background-image: linear-gradient(to right,red,blue, transparent);
+        }
     </style>
 
 </head>
@@ -84,10 +88,6 @@
 
 <body style="overflow: hidden;">
     <div class="container-fluid">
-        <header class="text-center">
-            <object data="Img/ElevHalsaLogo.svg" type="image/svg+xml" width="350">
-            </object>
-        </header>
         <div id="carouselExampleIndicators" class="carousel slide person-info" data-ride="carousel" data-pause="false" data-interval="15000" style="height: 10rem">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -96,9 +96,15 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
+                    <header class="text-center">
+                        <object data="Img/ElevHalsaLogo.svg" type="image/svg+xml" width="350">
+                        </object>
+                    </header>
                     <div class="name row justify-content-between">
                         <div class="col-7">
                             <!-- Name -->
@@ -113,7 +119,7 @@
                         <div class="col-7">
                             <p style="padding-left: 10px;">
                                 <!-- Info -->
-                                info
+                                Info
 
                             </p>
                         </div>
@@ -138,6 +144,10 @@
                 </div>
 
                 <div class="carousel-item">
+                    <header class="text-center">
+                        <object data="Img/ElevHalsaLogo.svg" type="image/svg+xml" width="350">
+                        </object>
+                    </header>
                     <div class="name row justify-content-between">
                         <div class="col-7">
                             <!-- Name -->
@@ -177,6 +187,10 @@
                 </div>
 
                 <div class="carousel-item">
+                    <header class="text-center">
+                        <object data="Img/ElevHalsaLogo.svg" type="image/svg+xml" width="350">
+                        </object>
+                    </header>
                     <div class="name row justify-content-between">
                         <div class="col-7">
                             <!-- Name -->
@@ -207,14 +221,17 @@
                         <i class="fa fa-phone"></i> Telefon: 018-18 22 93, 076-830 32 48<br />
 
                         <!-- Working days and hours -->
-                        <i class="fa fa-calendar-alt"></i> Arbetar: Alla dagar Utom tisdagar<br />
-
+                        <i class="fa fa-calendar-alt"></i> Arbetar: Alla dagar utom tisdagar ca 08-16<br />
                         <!-- room number/location -->
                         <i class="fa fa-map-marker-alt"></i> Sal: 327, Våning: 3 <br><br><br><br><br><br />
                     </p>
                 </div>
 
                 <div class="carousel-item">
+                    <header class="text-center">
+                        <object data="Img/ElevHalsaLogo.svg" type="image/svg+xml" width="350">
+                        </object>
+                    </header>
                     <div class="name row justify-content-between">
                         <div class="col-7">
                             <!-- Name -->
@@ -247,7 +264,7 @@
                         <i class="fa fa-phone"></i> Telefon: 018-18 22 73, 076-820 11 72<br />
 
                         <!-- Working days and hours -->
-                        <i class="fa fa-calendar-alt"></i> Arbetar: Måndagar, onsdagar, jämna fredagar<br />
+                        <i class="fa fa-calendar-alt"></i> Arbetar:Måndagar, onsdagar, jämna fredagar 08-17<br />
 
                         <!-- room number/location -->
                         <i class="fa fa-map-marker-alt"></i> Sal: 329, Våning: 3 <br><br><br><br><br><br />
@@ -255,6 +272,10 @@
                 </div>
 
                 <div class="carousel-item">
+                    <header class="text-center">
+                        <object data="Img/ElevHalsaLogo.svg" type="image/svg+xml" width="350">
+                        </object>
+                    </header>
                     <div class="name row align-items-end justify-content-between">
                         <div class="col-7">
                             <!-- Name -->
@@ -293,6 +314,10 @@
                 </div>
 
                 <div class="carousel-item">
+                    <header class="text-center">
+                        <object data="Img/ElevHalsaLogo.svg" type="image/svg+xml" width="350">
+                        </object>
+                    </header>
                     <div class="name row align-items-end justify-content-between">
                         <div class="col-7">
                             <!-- Name -->
@@ -329,10 +354,93 @@
                         <i class="fa fa-map-marker-alt"></i> Sal: 127 , Våning: 1 <br><br><br><br><br><br /> 
                     </p>
                 </div>
+                <div class="carousel-item bp">
+                    <header class="text-center">
+                        <object data="Img/ProCivitas logotyp liten.png" type="image/svg+xml" width="350" height="218">
+                        </object>
+                    </header>
+                    <div class="procivitas row align-items-end justify-content-between">
+                        <div class="col-7">
+                            <!-- Name -->
+                            <h2 style="padding-left: 10px;">Anna Ekroth</h2>
+                        </div>
+                        <div class="col-4 pl-0">
+                            <!-- Role -->
+                            <h2>Skolsköterska</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-7">
+                            <p style="padding-left: 10px;">
+                                <!-- Info -->
+                                Anna arbetar som skolsköterska. En skolsköterska erbjuder alla elever hälsobesök med hälsosamtal i åk1.
+                                Som gymnasieelev förväntas man, med stöd av vårdnadshavare, att ta eget ansvar för mediciner som man eventuellt behöver ta under skoldagen. Skolsköterskor har tystnadsplikt.
+                            </p>
+                        </div>
+                        <div class="col text-center">
+                            <!-- Image -->
+                            <img class="profile-image" src="Img/Profile/anna300.jpg" />
+                        </div>
+                    </div>
+                    <p class="contact">
+                        <!-- Email -->
+                        <i class="fa fa-envelope"></i> E-post:  Anna.ekroth@procivitas.se<br />
+
+                        <!-- Phone -->
+                        <i class="fa fa-phone"></i> Telefon: 018-56 03 71<br />
+
+                        <!-- Working days and hours -->
+                        <i class="fa fa-calendar-alt"></i> Arbetar: Hela torsdagar<br />
+
+                        <!-- room number/location -->
+                        <i class="fa fa-map-marker-alt"></i> Sal: 329 , Våning: 3 <br><br><br><br><br><br />
+                    </p>
+                </div>
+                <div class="carousel-item bp">
+                    <header class="text-center">
+                        <object data="Img/ProCivitas logotyp liten.png" type="image/svg+xml" width="350" height="218">
+                        </object>
+                    </header>
+                    <div class="procivitas row align-items-end justify-content-between">
+                        <div class="col-7">
+                            <!-- Name -->
+                            <h2 style="padding-left: 10px;">Jasmine Fares</h2>
+                        </div>
+                        <div class="col-4 pl-0">
+                            <!-- Role -->
+                            <h2>Skolkurator</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-7">
+                            <p style="padding-left: 10px;">
+                                <!-- Info -->
+                                Jasmine arbetar som skolkurator. En skolkurator arbetar med elevernas psykosociala hälsa i frågor som rör trygghet, trivsel, arbetsmiljö, relationer och den sociala situationen både i och utanför skolan.
+                            </p>
+                        </div>
+                        <div class="col text-center">
+                            <!-- Image -->
+                            <img class="profile-image" src="Img/Profile/jasmine300.jpg" />
+                        </div>
+                    </div>
+                    <p class="contact">
+                        <!-- Email -->
+                        <i class="fa fa-envelope"></i> E-post:  jasmine.fares@procivitas.se<br />
+
+                        <!-- Phone -->
+                        <i class="fab fa-instagram"></i> Instagram: kurator.fares<br />
+
+                        <!-- Working days and hours -->
+                        <i class="fa fa-calendar-alt"></i> Arbetar: Hela torsdagar<br />
+
+                        <!-- room number/location -->
+                        <i class="fa fa-map-marker-alt"></i> Sal: 329 , Våning: 3 <br><br><br><br><br><br /> 
+                    </p>
+                </div>
             </div>
         </div>
     </div>
-    <div style="position:absolute; right:15px; bottom:15px; ">
+    <div style="position:absolute; right:15px; bottom:15px;>
         <img src="Img\TE4-logo-transparent.png" alt="TE4" height="120px;">
     </div>
 </body>
