--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -66,7 +66,7 @@
         }
 
         .carousel-indicators {
-            bottom: -370px;
+            bottom: -588px;
         }
 
         .contact {
@@ -119,7 +119,7 @@
                         <div class="col-7">
                             <p style="padding-left: 10px;">
                                 <!-- Info -->
-                                Info
+                                Mathias är rektor och ytterst ansvarig för elev hälso teamet. 
 
                             </p>
                         </div>
