Fixed typos and procivitas logo

--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -79,7 +79,7 @@
         }
         .procivitas{
             font-size: 40px;
-            background-image: linear-gradient(to right,red,blue, transparent);
+            background-image: linear-gradient(to right,#d8091a,#0161a5, transparent);
         }
     </style>
 
@@ -119,7 +119,7 @@
                         <div class="col-7">
                             <p style="padding-left: 10px;">
                                 <!-- Info -->
-                                Mathias är rektor och ytterst ansvarig för elev hälso teamet. 
+                                Mathias är rektor och ytterst ansvarig för elevhälsoteamet. 
 
                             </p>
                         </div>
@@ -139,7 +139,7 @@
                         <i class="fa fa-calendar-alt"></i> Arbetar: Alla dagar 08-17<br />
 
                         <!-- room number/location -->
-                        <i class="fa fa-map-marker-alt"></i> Sal: 126 Våning: 1 <br><br><br><br><br><br />
+                        <i class="fa fa-map-marker-alt"></i> Sal: 126, Våning: 1 <br><br><br><br><br><br><br><br><br/>
                     </p>
                 </div>
 
@@ -182,7 +182,7 @@
                         <i class="fa fa-calendar-alt"></i> Arbetar: Alla dagar 08-12<br />
 
                         <!-- room number/location -->
-                        <i class="fa fa-map-marker-alt"></i> Sal: 326 Våning: 3 <br><br><br><br><br><br />
+                        <i class="fa fa-map-marker-alt"></i> Sal: 326, Våning: 3 <br><br><br><br><br><br />
                     </p>
                 </div>
 
@@ -246,7 +246,7 @@
                         <div class="col-7">
                             <p style="padding-left: 10px;">
                                 <!-- Info -->
-                                Maud arbetar som skolsköterska. En skolsköterska erbjuder alla elever hälsobesök med hälsosamtal i åk1.
+                                Maud arbetar som skolsköterska. En skolsköterska erbjuder alla elever hälsobesök med hälsosamtal i åk 1.
                                 Som gymnasieelev förväntas man, med stöd av vårdnadshavare, att ta eget ansvar för mediciner som man eventuellt behöver ta under skoldagen. Skolsköterskor har tystnadsplikt.
 
                             </p>
@@ -264,7 +264,7 @@
                         <i class="fa fa-phone"></i> Telefon: 018-18 22 73, 076-820 11 72<br />
 
                         <!-- Working days and hours -->
-                        <i class="fa fa-calendar-alt"></i> Arbetar:Måndagar, onsdagar, jämna fredagar 08-17<br />
+                        <i class="fa fa-calendar-alt"></i> Arbetar: Måndagar, onsdagar, jämna fredagar 08-17<br />
 
                         <!-- room number/location -->
                         <i class="fa fa-map-marker-alt"></i> Sal: 329, Våning: 3 <br><br><br><br><br><br />
@@ -332,7 +332,7 @@
                         <div class="col-7">
                             <p style="padding-left: 10px;">
                                 <!-- Info -->
-                                Sarah arbetar som biträdande rektor och specialpedagog. En specialpedagog samarbetar med övrig personal för att göra skolan tillgänglig för alla elever. Om du behöver hjälp i dina studier kan specialpedagogen se över din studiesituation för att hitta vägar och den hjälp du behöver.
+                                Sarah arbetar som specialpedagog och ansvarig för elevhälsoteamet. En specialpedagog samarbetar med övrig personal för att göra skolan tillgänglig för alla elever. Om du behöver hjälp i dina studier kan specialpedagogen se över din studiesituation för att hitta vägar och den hjälp du behöver.
                             </p>
                         </div>
                         <div class="col text-center">
@@ -351,12 +351,12 @@
                         <i class="fa fa-calendar-alt"></i> Arbetar: Alla dagar 08-17<br />
 
                         <!-- room number/location -->
-                        <i class="fa fa-map-marker-alt"></i> Sal: 127 , Våning: 1 <br><br><br><br><br><br /> 
+                        <i class="fa fa-map-marker-alt"></i> Sal: 127, Våning: 1 <br><br><br><br><br><br /> 
                     </p>
                 </div>
                 <div class="carousel-item bp">
                     <header class="text-center">
-                        <object data="Img/ProCivitas logotyp liten.png" type="image/svg+xml" width="350" height="218">
+                        <object data="Img/logo-procivitas.png" type="image/svg+xml" width="350" height="218">
                         </object>
                     </header>
                     <div class="procivitas row align-items-end justify-content-between">
@@ -384,7 +384,7 @@
                     </div>
                     <p class="contact">
                         <!-- Email -->
-                        <i class="fa fa-envelope"></i> E-post:  Anna.ekroth@procivitas.se<br />
+                        <i class="fa fa-envelope"></i> E-post: anna.ekroth@procivitas.se<br />
 
                         <!-- Phone -->
                         <i class="fa fa-phone"></i> Telefon: 018-56 03 71<br />
@@ -393,12 +393,12 @@
                         <i class="fa fa-calendar-alt"></i> Arbetar: Hela torsdagar<br />
 
                         <!-- room number/location -->
-                        <i class="fa fa-map-marker-alt"></i> Sal: 329 , Våning: 3 <br><br><br><br><br><br />
+                        <i class="fa fa-map-marker-alt"></i> Sal: 329, Våning: 3 <br><br><br><br><br><br />
                     </p>
                 </div>
                 <div class="carousel-item bp">
                     <header class="text-center">
-                        <object data="Img/ProCivitas logotyp liten.png" type="image/svg+xml" width="350" height="218">
+                        <object data="Img/logo-procivitas.png" type="image/svg+xml" width="350" height="218">
                         </object>
                     </header>
                     <div class="procivitas row align-items-end justify-content-between">
@@ -434,7 +434,7 @@
                         <i class="fa fa-calendar-alt"></i> Arbetar: Hela torsdagar<br />
 
                         <!-- room number/location -->
-                        <i class="fa fa-map-marker-alt"></i> Sal: 329 , Våning: 3 <br><br><br><br><br><br /> 
+                        <i class="fa fa-map-marker-alt"></i> Sal: 324, Våning: 3 <br><br><br><br><br><br /> 
                     </p>
                 </div>
             </div>
