Fixed typo and better resolution logo

--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -253,7 +253,7 @@
                         </div>
                         <div class="col text-center">
                             <!-- Image -->
-                            <img class="profile-image" src="Img/Profile/Maud300.jpg" />
+                            <img class="profile-image" src="Img/Profile/maud300.jpg" />
                         </div>
                     </div>
                     <p class="contact">
@@ -356,7 +356,7 @@
                 </div>
                 <div class="carousel-item bp">
                     <header class="text-center">
-                        <object data="Img/logo-procivitas.png" type="image/svg+xml" width="350" height="218">
+                        <object data="Img/ProCivitas_logotyp.png" type="image/svg+xml" width="350" height="218">
                         </object>
                     </header>
                     <div class="procivitas row align-items-end justify-content-between">
@@ -398,7 +398,7 @@
                 </div>
                 <div class="carousel-item bp">
                     <header class="text-center">
-                        <object data="Img/logo-procivitas.png" type="image/svg+xml" width="350" height="218">
+                        <object data="Img/ProCivitas_logotyp.png" type="image/svg+xml" width="350" height="218">
                         </object>
                     </header>
                     <div class="procivitas row align-items-end justify-content-between">
