--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -390,7 +390,7 @@
                         <i class="fa fa-phone"></i> Telefon: 018-56 03 71<br />
 
                         <!-- Working days and hours -->
-                        <i class="fa fa-calendar-alt"></i> Arbetar: Hela torsdagar<br />
+                        <i class="fa fa-calendar-alt"></i> Arbetar: Torsdagar 08-16<br />
 
                         <!-- room number/location -->
                         <i class="fa fa-map-marker-alt"></i> Sal: 329, Våning: 3 <br><br><br><br><br><br />
@@ -431,7 +431,7 @@
                         <i class="fab fa-instagram"></i> Instagram: kurator.fares<br />
 
                         <!-- Working days and hours -->
-                        <i class="fa fa-calendar-alt"></i> Arbetar: Hela torsdagar<br />
+                        <i class="fa fa-calendar-alt"></i> Arbetar: Torsdagar 08-16<br />
 
                         <!-- room number/location -->
                         <i class="fa fa-map-marker-alt"></i> Sal: 324, Våning: 3 <br><br><br><br><br><br /> 
@@ -440,7 +440,7 @@
             </div>
         </div>
     </div>
-    <div style="position:absolute; right:15px; bottom:15px;>
+    <div style="position:absolute; right:15px; bottom:15px;">
         <img src="Img\TE4-logo-transparent.png" alt="TE4" height="120px;">
     </div>
 </body>
