Removed unused code

--- a/Skylt/index.html
+++ b/Skylt/index.html
@@ -354,7 +354,7 @@
                         <i class="fa fa-map-marker-alt"></i> Sal: 127, Våning: 1 <br><br><br><br><br><br /> 
                     </p>
                 </div>
-                <div class="carousel-item bp">
+                <div class="carousel-item">
                     <header class="text-center">
                         <object data="Img/ProCivitas_logotyp.png" type="image/svg+xml" width="350" height="218">
                         </object>
@@ -396,7 +396,7 @@
                         <i class="fa fa-map-marker-alt"></i> Sal: 329, Våning: 3 <br><br><br><br><br><br />
                     </p>
                 </div>
-                <div class="carousel-item bp">
+                <div class="carousel-item">
                     <header class="text-center">
                         <object data="Img/ProCivitas_logotyp.png" type="image/svg+xml" width="350" height="218">
                         </object>
